[tool.poetry]
name = "pytest-test"
version = "0.1.0"
description = ""
authors = ["KAkikaku.fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.2"
pytest-order = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
